# pyErgast

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pyergast.rst
pyergast/: pyergast.py
tests/: test_pyergast.py
