[tool.poetry]
name = "pyErgast"
version = "0.1.0"
description = "Python pandas wrapper for the Ergast F1 API"
authors = ["Weiran Yu <weiranyu@hotmail.com>"]
readme = "README.md"
documentation = 'https://pyergast.readthedocs.io/en/latest/'
homepage = "https://github.com/weiranyu/pyErgast"
repository = "https://github.com/weiranyu/pyErgast"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
